chore: minor testmod tweaks